docs(testing): 完善单元测试最佳实践文档
- 测试框架架构和分层结构
- BaseTest/BaseServiceTest/BaseControllerTest 基类详解
- TestDataBuilder 50+种测试数据生成方法
- 测试用例编写规范(AAA模式、命名规范)
- 常见测试场景(工具类、服务层、加密、集成测试)
- Mock技术(Mockito、@MockBean)
- 参数化测试和覆盖率配置
- 最佳实践和常见问题解决方案

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>